kube/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-deployment
  namespace: default
  labels:
    app: app-deployment
spec:
  selector:
    matchLabels:
      app: app
  replicas: 2
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: app
    spec:
      containers:
      - name: app
        image: 550829113882.dkr.ecr.us-east-1.amazonaws.com/app:282029
        ports:
        - containerPort:  80
          name: app-deployment
      restartPolicy: Always
